--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ log = "0.3"
 num-traits = "0.1"
 asprim = "0.1"
 
+[target.'cfg(target_os = "windows")'.dependencies]
+winapi = "0.2"
+kernel32-sys = "0.2"
+
 [dev-dependencies]
 log-panics = "1.1"
 simplelog = "0.4"
