--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Boscop <kingboscop@gmail.com>"]
 
 [dependencies]
 # vst2 = { path = 'D:\projects\forks\rust-vst2' }
-vst2 = { git = 'https://github.com/Boscop/rust-vst2' }
+vst2 = { git = 'https://github.com/Boscop/rust-vst2', branch = 'optimized' }
 log = "0.3"
 num-traits = "0.1"
 asprim = "0.1"
