--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 authors = ["Boscop"]
 
 [dependencies]
+vst = { git = 'https://github.com/rust-dsp/rust-vst' }
 # vst = { path = 'D:\projects\forks\rust-vst' }
-vst = { git = 'https://github.com/Boscop/rust-vst', branch = 'dev' }
+# vst = { git = 'https://github.com/Boscop/rust-vst', branch = 'dev' }
 log = "0.3"
 num-traits = "0.1"
 asprim = "0.1"
